hdparm-6.8
	- improve parsing/operation of --Istdin function
hdparm-6.7
	- don't default to "-v" when only new "--" longopts are used.
	- calculate integrity word if not correct
	- remove used code/parameter from identify()
	- fix "(null)" strings from the "Drive conforms to" line of -I
	- tidied up usage of prefix vars in Makefile
	- fix bug in -C implementation
	- new -H flag for (Hitachi) drive temperature
hdparm-6.6
	- fix build for Redhat/Fedora systems.
	- disable security commands when building on Redhat/Fedora,
	  as they lack the required data structures in the system headers.
hdparm-6.5
	- fix -I bugs from version 6.4.
hdparm-6.4
	- Makefile updates from Mikkel Krautz.
	- manpage updates / corrections.
	- fixed bug in -C code.
	- major updates to bring -I information up to current specs.
hdparm-6.3
	- added reporting of ATA revision numbers > 7
hdparm-6.2
	- eliminated short form (-F) of --security-freeze flag
	- completely revamped ATA Security Commands
	   (now they actually work sometimes)
	   courtesy of Leonard den Ottolander (a BIG thank-you!)
hdparm-6.1
	- fix BLKGETSIZE bug introduced in 6.0
	- man page clarification for -M (courtesy Stephen Gran)
hdparm-6.0
	- correct usage of BLKGETSIZE64 (returns bytes instead of sectors)
	- Added ATA Security switches (Benjamin Benz bbe[AT]heise[DOT]de)
hdparm-5.9
	- fix security-mode display (Franz Lehner)
	- fixed -W bug (Stephan Gran)
hdparm-5.8
	- added HDIO_SET_WCACHE support to -W
	- fixed double byteswap for big endian
	- fixed %lld warnings on 64-bit architectures
	- "hdparm -h" now goes to stdout instead of stderr
hdparm-5.7
	- fixed output of NULs in -I string fields
	- fixed big-endian -I crashes from 5.6
	- removed remains of defunct major-number checks
	- added support for BLKGETSIZE64 ioctl internally
	- added --direct flag to use O_DIRECT on device open
	- renamed -Istdin  to --Istdin
	- renamed -Istdout to --Istdout
	- allow other flags to follow any of: -I, --Istdin, --Istdout
hdparm-5.6